--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       </header>
       <section>
         <h1>
-<a name="albert-alpha-04" class="anchor" href="#albert-alpha-04"><span class="octicon octicon-link"></span></a>Albert (alpha 0.4)</h1>
+<a id="albert-alpha-06" class="anchor" href="#albert-alpha-06" aria-hidden="true"><span class="octicon octicon-link"></span></a>Albert (alpha 0.6)</h1>
 
 <h3>
-<a name="an-amazing-desktop-environment-agnostic-omnilauncher" class="anchor" href="#an-amazing-desktop-environment-agnostic-omnilauncher"><span class="octicon octicon-link"></span></a>An amazing, desktop environment agnostic omnilauncher</h3>
+<a id="an-amazing-desktop-environment-agnostic-omnilauncher" class="anchor" href="#an-amazing-desktop-environment-agnostic-omnilauncher" aria-hidden="true"><span class="octicon octicon-link"></span></a>An amazing, desktop environment agnostic omnilauncher</h3>
 
-<p><img src="https://raw.githubusercontent.com/ManuelSchneid3r/albert/master/v0.3.gif" alt="Image of v0.3"></p>
+<p><img src="https://raw.githubusercontent.com/ManuelSchneid3r/albert/master/v0.6.gif" alt="Image of v0.6"></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/ManuelSchneid3r">ManuelSchneid3r</a></p>
