Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 <h3>
 <a id="an-amazing-desktop-environment-agnostic-omnilauncher" class="anchor" href="#an-amazing-desktop-environment-agnostic-omnilauncher" aria-hidden="true"><span class="octicon octicon-link"></span></a>An amazing, desktop environment agnostic omnilauncher</h3>
 
+<p>The backend will be rewritten at the end of February!
+If you want to contribute please wait for a while.</p>
+
 <p><img src="https://raw.githubusercontent.com/ManuelSchneid3r/albert/master/v0.6.gif" alt="Image of v0.6"></p>
 
       <footer class="site-footer">
