Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,13 +20,10 @@
 
     <section class="main-content">
       <h1>
-<a id="albert-alpha-06" class="anchor" href="#albert-alpha-06" aria-hidden="true"><span class="octicon octicon-link"></span></a>Albert (alpha 0.6)</h1>
+<a id="albert-" class="anchor" href="#albert-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Albert <a href="https://kiwiirc.com/client/irc.freenode.net/#albertlauncher"><img src="https://img.shields.io/badge/IRC-%23albertlauncher-blue.svg?style=flat-square" alt="IRC"></a>
+</h1>
 
-<h3>
-<a id="an-amazing-desktop-environment-agnostic-omnilauncher" class="anchor" href="#an-amazing-desktop-environment-agnostic-omnilauncher" aria-hidden="true"><span class="octicon octicon-link"></span></a>An amazing, desktop environment agnostic omnilauncher</h3>
-
-<p>The backend will be rewritten at the end of February!
-If you want to contribute please wait for a while.</p>
+<p>Access everything with virtually zero effort. Run applications, open files or their paths, open bookmarks in your browser, search the web, calculate things and a lot more. See <a href="https://github.com/ManuelSchneid3r/albert/wiki">wiki</a> for more information.</p>
 
 <p><img src="https://raw.githubusercontent.com/ManuelSchneid3r/albert/master/v0.6.gif" alt="Image of v0.6"></p>
 
